--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
 <html ng-app="app">
-    <head>
-        <meta charset="utf-8">
-        <title>Angular Project</title>
-    </head>
-    <body ng-controller='mainController as vm'>
 
-        <script src="js/libs/angular.min.js"></script>
-        <script src="js/controllers/mainController.js"></script>
-        <script src="js/app.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Angular Project</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <script src="js/libs/angular.min.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/app.js"></script>
+
+</head>
+
+<body ng-controller='mainController'>
+    <div class="container">
+
+        <center><h1>Veuillez créer un compte</h1></center>
+<center><p>__________________________________________________________________________________________________________________________________________________</p></center>
+        <div class="form-group row">
+            <label for="firstname" class="col-6 col-form-label">Prénom</label>
+            <div class="col-10">
+                <input ng-model="userFirstName" class="form-control" type="text" id="firstname">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="lastname" class="col-6 col-form-label">Nom</label>
+            <div class="col-10">
+                <input ng-model="userLastName" class="form-control" type="text" id="lastname">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="email" class="col-6 col-form-label">Email</label>
+            <div class="col-10">
+                <input ng-model="userMail" class="form-control" type="email" id="email">
+            </div>
+        </div>
+        <center><div class="form-group row">
+            <div class="offset-sm-6">
+                <button type="submit" class="btn btn-alert" ng-click="addUser()">Créer votre compte</button>
+            </div>
+        </div></center>
+
+        <!--    <form>
+
+        <input ng-model="userName" id="name" /><br />
+        <input ng-model="userFirstName" id="firstname" /><br />
+        <input ng-model="userMail" id="mail" /><br />
+        <button type="submit" ng-click="addUser()">AJOUTER</button>
+
+
+    </form>-->
+
+        <table class="table table-striped" ng-if="users.length > 0">
+            <tbody>
+                <tr ng-repeat="user in users">
+
+                    <td>{{user.firstname}}</td>
+                    <td>{{user.lastname}}</td>
+                    <td>{{user.email}}</td>
+
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+    <center><p>________________________________________________________________________________________________________________</p></center>
+  <center><p>Valentin Rigaud</p></center>
+</body>
+
 </html>
