--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="container">
 
         <center><h1>Veuillez créer un compte</h1></center>
-<center><p>__________________________________________________________________________________________________________________________________________________</p></center>
         <div class="form-group row">
             <label for="firstname" class="col-6 col-form-label">Prénom</label>
             <div class="col-10">
@@ -63,8 +62,7 @@
         </table>
 
     </div>
-    <center><p>________________________________________________________________________________________________________________</p></center>
-  <center><p>Valentin Rigaud</p></center>
+<center><p>Valentin RIGAUD</p></center>
 </body>
 
 </html>
